# project

./: CMakeLists.txt  Note.txt
docker/: CMakeLists.txt  docker.sh  exe.sh
docker/include/: gcommand.h
docker/src/: get_command.c  main.c
onvif_su/: CMakeLists.txt
onvif_su/include/: RemoteDiscoveryBinding.nsmap  onvif.h  onvif_test.h  soapStub.h  stdsoap2.h
onvif_su/lib/: libcrypto.so.1.0.0
onvif_su/src/: onvif_test.c  soapClient.c  stdsoap2.c
quque/client/: CMakeLists.txt  exe
quque/client/include/: IPC_Recv.h  create_Que.h  log.h
quque/client/src/: IPC_Recv.c  create_Que.c  kill_Que.c  log.c  main.c
quque/server/: CMakeLists.txt  exe
quque/server/include/: IPC_Send.h  create_Que.h  kill_Que.h
quque/server/src/: IPC_Send.c  create_Que.c  kill_Que.c  main.c
